--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "scripts": {
     "dev": "node --watch --env-file .env src/server.js",
     "start": "node src/server.js",
-    "install-ffmpeg": "mkdir -p bin && curl -L https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-i686-static.tar.xz -o ffmpeg.tar.xz && tar -xf ffmpeg.tar.xz && mv ffmpeg*/ffmpeg ./bin/ffmpeg && mv ffmpeg*/ffprobe ./bin/ffprobe && ./bin/ffmpeg -version",
+    "install-ffmpeg": "mkdir -p bin && curl -L https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-i686-static.tar.xz -o ffmpeg.tar.xz && tar -xf ffmpeg.tar.xz && mv ffmpeg*/ffmpeg ./bin/ffmpeg && mv ffmpeg*/ffprobe ./bin/ffprobe && chmod +x ./bin/ffmpeg ./bin/ffprobe && ./bin/ffmpeg -version",
     "install-yt": "mkdir -p bin && curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o yt-dlp && chmod +x yt-dlp && mv yt-dlp ./bin/yt-dlp && ./bin/yt-dlp --version",
-    "postinstall": "npm run install-ffmpeg && npm run install-yt",
-    "oficial-render": "curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o yt-dlp && chmod +x yt-dlp"
+    "postinstall": "npm run install-ffmpeg && npm run install-yt"
   },
   "keywords": [],
   "author": "",
